mosquit : 1. add infer_fn and eval_fn

--- a/config/default_animegan_warmup.yml
+++ b/config/default_animegan_warmup.yml
@@ -23,47 +23,32 @@ train:
   graph_optimizer: true
   graph_optimizer_kwarg:
     layout_optimizer: true
-    constant_folding: true
-    shape_optimization: true
     remapping: true
-    arithmetic_optimization: true
-    dependency_optimization: true
+    shape_optimization: true
     loop_optimization: true
+    constant_folding: true
     function_optimization: true
-    debug_stripper: true
-    disable_model_pruning: false
     scoped_allocator_optimization: true
-    pin_to_host_optimization: false
-    implementation_selector: true
-    auto_mixed_precision: false
-    disable_meta_optimizer: false
-    min_graph_nodes: true
   distributionstrategy_kwarg:
     tpu: null
     strategy: Mirrored
   augmenter: true
   batch_size: 2
-  pre_ckpt: log/default_animegan_exp/final_save
+  pre_ckpt: null
   rand_seed: 10101
-  epochs: 50
+  epochs: 20
   train_epoch_step: null
   vali_epoch_step: null
   steps_per_run: 30
   log_dir: log
-  sub_log_dir: default_animegan_exp_2
+  sub_log_dir: default_animegan_warmup_exp
   mixed_precision:
     enable: false
     dtype: mixed_float16
-  trainloop: AnimeGanLoop
+  trainloop: AnimeGanInitLoop
   trainloop_kwarg:
     hparams:
       wc: 1.5 # l1 loss with pre-trained model weight
-      ws: 3.0 # sty loss weight
-      wcl: 10.0 # color loss weight
-      wg: 300.0 # generator loss weight
-      wd: 300.0 # discriminator loss weight
-      ltype: lsgan # gan loss type in [gan, lsgan, wgan-gp, wgan-lp, dragan, hinge]
-      ld: 10.0 # gradient penalty lambda
       ema:
         enable: false
         decay: 0.999
@@ -77,7 +62,7 @@ train:
     mode: min
   generator_optimizer: Adam
   generator_optimizer_kwarg:
-    learning_rate: 0.00016
+    learning_rate: 0.0001 # 0.00016
     beta_1: 0.5
     beta_2: 0.999
   discriminator_optimizer: Adam
@@ -92,7 +77,7 @@ train:
         min_delta: 0
         patience: 20
         verbose: 0
-        mode: max
+        mode: min
         baseline: null
         restore_best_weights: false
     # - name: ScheduleLR
