--- a/config/default_animegan.yml
+++ b/config/default_animegan.yml
@@ -43,9 +43,9 @@ train:
     strategy: Mirrored
   augmenter: true
   batch_size: 2
-  pre_ckpt: log/default_animegan_exp/final_save
+  pre_ckpt: log/default_animegan_warmup_exp/final_save # log/default_animegan_exp/final_save
   rand_seed: 10101
-  epochs: 50
+  epochs: 100
   train_epoch_step: null
   vali_epoch_step: null
   steps_per_run: 30
@@ -86,15 +86,16 @@ train:
     beta_1: 0.5
     beta_2: 0.999
   callbacks:
-    - name: EarlyStopping
-      kwarg:
-        monitor: train/g_loss
-        min_delta: 0
-        patience: 20
-        verbose: 0
-        mode: max
-        baseline: null
-        restore_best_weights: false
+    null
+    # - name: EarlyStopping
+    #   kwarg:
+    #     monitor: train/g_loss
+    #     min_delta: 0
+    #     patience: 20
+    #     verbose: 0
+    #     mode: max
+    #     baseline: null
+    #     restore_best_weights: false
     # - name: ScheduleLR
     #   kwarg:
     #     base_lr: 0.03
